tests_bucklescript/__snapshots__/Error_Records_missingField_re.1cc96e2f.0.snapshot
Error Records › missingField2.re › output
File \"operations/errors/missingField2.re\", line 13, characters 8-28:
13 |     l1: thisTypeDoesNotExist {
             ^^^^^^^^^^^^^^^^^^^^
Error: Unknown field 'thisTypeDoesNotExist' on type Query

  We've found a bug for you!
  operations/errors/missingField2.re
  
  Error while running external preprocessor
Command line: ../_build/default/src/bucklescript_bin/bin.exe  '/var/folders/nn/nkqr2fl53p93lzfh2n6s17hh0000gn/T/camlppx58f775' '/var/folders/nn/nkqr2fl53p93lzfh2n6s17hh0000gn/T/camlppx9dd425'

  

